<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal" >
    <!--android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MyActivity">-->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
        <!--<EditText
            android:id="@+id/edit_message"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/edit_message"
            android:layout_weight="1"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_send"
            android:onClick="sendMessage"/>-->
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="ToLights"
                android:onClick="openLights"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/startBT"
                android:onClick="startBT"/>
<!--            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/stuff"/>-->
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/DisableBT"
                android:onClick="disableBT"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/discoverBT"
                android:onClick="discoverableBT"/>
<!--            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/stuff"/>-->

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/FindDevices"
                android:onClick="discoverBT"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ListDevices"
                android:onClick="listPairedDevices"/>
            <ListView
                android:id="@+id/listView1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="visible" >
            </ListView>
            <Button
                android:id="@+id/Button1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/light1on"
                android:onClick="toggleLight"/>
            <Button
                android:id="@+id/Button2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/light1off"
                android:onClick="toggleLight"/>
        </LinearLayout>

    </ScrollView>

</RelativeLayout>



